# conceptual-modeler

./: .gitignore  CONTRIBUTING.rst  LICENSE  README.md  README.rst  app.py  captain-definition  requirements.txt  setup.cfg  template.html  test.py
.deploy/: Dockerfile
.deploy/setup/: apps.yml  initialize.sh
.github/workflows/: test_and_release.yml
bundles/desktop/macOS/: setup.py
bundles/desktop/windows/: README.md  create_exe.bat  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
cm_assets/: __init__.py
cm_assets/serve/assets/: style.css
conceptual_modeler/app/: engine.py  jupyter.py  main.py  matplotlib_manager.py  pipeline_manager.py  ui.py
conceptual_modeler/app/modeler/: subsurface.py  visualization.py
examples/jupyter/: show.ipynb
modeler/: GemPy.py  SharedState.py  Visualization.py  config.py  importer.py  subsurface.py  visualization.py  workflow.py
models/model-1a/: grid.csv  stacks.csv  surfaces.csv  topography.csv
models/model-3c/: grid.csv  stacks.csv  surfaces.csv
models/model-4/: grid.csv  orientations.csv  points.csv  stacks.csv  surfaces.csv
models/model-5a/: grid.csv  orientations.csv  points.csv  stacks.csv  surfaces.csv
models/model-5b/: model-fault-5b-orientations.csv  model-fault-5b-surface_points.csv  model-fault-5b.json
models/model-7/: model-7-grid.csv  model-7-stacks.csv  model-7-surfaces.csv  model-7.json
tests/: test_import.py
