[metadata]
name = conceptual-modeler
version = 1.0.0
description = A Python-based 3-D conceptual modeler allows for the implicit creation of complex geological models from interface and orientation data using Gempy.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick O'Leary
license = BSD License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame<3
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

[options.entry_points]
console_scripts =
    conceptual-modeler = conceptual_modeler:main
jupyter_serverproxy_servers =
    conceptual-modeler = conceptual_modeler.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
